--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -17,13 +17,15 @@ if(BOOTSTRAP_DEPS)
   if(BUILD_MCAS_SERVER)
     add_subdirectory(libfabric)
     add_subdirectory(zyre)
-    add_subdirectory(libdocker)
+    add_subdirectory(libdocker)    
   endif()
   set(TBB_BUILD_TESTS 0)
   add_subdirectory(tbb)
   add_subdirectory(libnupm/include/nupm)
   add_subdirectory(EASTL)
   add_subdirectory(GSL)
+  set(PISTACHE_USE_SSL 1)
+  add_subdirectory(pistache)
 else(BOOTSTRAP_DEPS)
   add_compile_options($<$<BOOL:${CODE_COVERAGE}>:--coverage>)
 
