--- a/src/server/rest-mcas/CMakeLists.txt
+++ b/src/server/rest-mcas/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(${CMAKE_INSTALL_PREFIX}/include)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib)
 link_directories(${CMAKE_INSTALL_PREFIX}/lib64)
 
-add_executable(${PROJECT_NAME} src/rest_server.cpp src/handlers.cpp)
+add_executable(${PROJECT_NAME} src/rest_server.cpp src/endpoint.cpp)
 
 target_link_libraries(${PROJECT_NAME} common boost_program_options ${CMAKE_BINARY_DIR}/src/lib/pistache/src/libpistache-0.0.002-git20210409.so ssl crypto cityhash)
 
