--- a/testing/eastl-test/CMakeLists.txt
+++ b/testing/eastl-test/CMakeLists.txt
@@ -17,4 +17,4 @@ target_link_libraries(${PROJECT_NAME} dl)
 target_compile_options(${PROJECT_NAME} PUBLIC "$<$<CONFIG:Debug>:-O0>")
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
 
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION testing)
